--- a/package.json
+++ b/package.json
@@ -3,24 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node index.js",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "b": "webpack --mode production",
+    "dev": "webpack serve --mode development"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "express": "^4.17.1",
-    "vue": "^2.6.11"
+    "axios": "^0.21.0",
+    "url-loader": "^4.1.1",
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.4.8",
+    "vue.js": "^0.3.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^7.0.1",
+    "img-loader": "^3.0.2",
+    "style-loader": "^2.0.0",
+    "vue-loader": "^15.9.4",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.3.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "eslintConfig": {
     "root": true,
