--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "b": "webpack --mode production",
     "dev": "webpack serve --mode development",
-    "jsonS": "json-server --watch ./src/assets/myDB.json"
+    "jsonS": "json-server --watch ./src/store/myDB.json"
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "json-server": "^0.16.3",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.4.8",
-    "vue.js": "^0.3.2"
+    "vue.js": "^0.3.2",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "css-loader": "^5.0.0",
