--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue-axios": "^2.1.5",
     "vue-router": "^3.4.8",
     "vue.js": "^0.3.2",
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.0",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "css-loader": "^5.0.0",
