made API from MongoDB

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "boom": "^7.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "mongoose": "^5.11.9",
