--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "json-server": "^0.16.3",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.4.8",
+    "vue-spinners-css": "^1.1.5",
     "vue.js": "^0.3.2",
     "vuex": "^3.6.0",
     "vuex-persistedstate": "^4.0.0-beta.1"
