--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "bugs": {
     "url": "https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance/issues"
   },
-  "homepage": "https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance#readme"
+  "homepage": "https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance#readme",
+  "dependencies": {
+    "dotenv": "^9.0.2"
+  }
 }
