--- a/package.json
+++ b/package.json
@@ -14,9 +14,5 @@
   "bugs": {
     "url": "https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance/issues"
   },
-  "homepage": "https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance#readme",
-  "dependencies": {
-    "dotenv": "^9.0.2",
-    "if-thursday": "^1.0.0"
-  }
+  "homepage": "https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance#readme"
 }
