checkbox mark is done, show marks by student is done, diploma is done

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance.git"
   },
-  "author": "",
+  "author": "Berkov Denis <denchikarabik@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance/issues"
