--- a/server/.env.example
+++ b/server/.env.example
@@ -2,9 +2,4 @@ MONGODB_domen="mongodb+srv://"
 MONGODB_user="user:password"
 MONGODB_options="@collegebook-cluster.mkrxf.mongodb.net/CollegeBook"
 
-PORT=3000
-
-UseCreateIndex=true
-UseNewUrlParser=true
-UseUnifiedTopology=true
-UseFindAndModify=false
+Server_PORT=3000
