--- a/server/.env.example
+++ b/server/.env.example
@@ -2,4 +2,4 @@ MONGODB_domen="mongodb+srv://"
 MONGODB_user="user:password"
 MONGODB_options="@collegebook-cluster.mkrxf.mongodb.net/CollegeBook"
 
-Server_PORT=3000
+SERVER_PORT=3000
