--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "author": "Berkov Denis <denchikarabik@gmail.com>",
+    "homepage": "https://github.com/deniska-sosiska/CollegeBook-MEVN-stack#readme",
+    "license": "ISC",
     "scripts": {
         "dev": "nodemon index.js"
     },
@@ -12,22 +14,46 @@
         "boom": "^7.3.0",
         "cors": "^2.8.5",
         "dotenv": "^9.0.2",
-        "eslint-config-airbnb-base": "^15.0.0",
         "express": "^4.17.1",
         "express-promise-router": "^4.0.1",
         "mongoose": "^6.0.10",
         "nodemon": "^2.0.6"
     },
+    "devDependencies": {
+        "eslint": "^8.6.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-import": "^2.25.4"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/deniska-sosiska/CollegeBook-MEVN-stack.git"
     },
-    "license": "ISC",
     "bugs": {
         "url": "https://github.com/deniska-sosiska/CollegeBook-MEVN-stack/issues"
     },
-    "homepage": "https://github.com/deniska-sosiska/CollegeBook-MEVN-stack#readme",
-    "devDependencies": {
-        "eslint": "^8.2.0"
+    "eslintConfig": {
+        "extends": "airbnb-base",
+        "env": {
+            "browser": true,
+            "commonjs": true,
+            "es2021": true,
+            "node": true
+        },
+        "root": true,
+        "rules": {
+            "no-unused-vars": "warn",
+            "indent": ["error", 4],
+            "no-multiple-empty-lines": ["warn", { "max": 4, "maxEOF": 0 } ],
+            "object-curly-newline": ["error", {
+                "multiline": true,
+                "consistent": true
+            }],
+            "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+            "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+            "curly": "error",
+            "no-restricted-syntax": ["error",
+                "ForInStatement", "LabeledStatement", "WithStatement"
+            ]
+        }
     }
 }
