--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,14 @@
     "name": "collegebook-server",
     "description": "automated-system-for-recording-student-attendance",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "src/index.js",
     "author": "Berkov Denis <denchikarabik@gmail.com>",
     "homepage": "https://github.com/deniska-sosiska/CollegeBook-MEVN-stack#readme",
     "license": "ISC",
     "scripts": {
-        "dev": "nodemon index.js"
+        "dev": "nodemon src/index.js"
     },
     "dependencies": {
-        "body-parser": "^1.19.0",
         "boom": "^7.3.0",
         "cors": "^2.8.5",
         "dotenv": "^9.0.2",
