new package.json scripts, added [babel, eslint], refactoring

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
-MONGODB_domen="mongodb+srv://"
-MONGODB_user="user:password"
-MONGODB_options="@collegebook-cluster.mkrxf.mongodb.net/CollegeBook"
+MONGODB_DOMEN="mongodb+srv://"
+MONGODB_USER="user:password"
+MONGODB_OPTIONS="@collegebook-cluster.mkrxf.mongodb.net/CollegeBook"
 
 SERVER_PORT=3000
