--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,14 @@
     "homepage": "https://github.com/deniska-sosiska/CollegeBook-MEVN-stack#readme",
     "license": "ISC",
     "scripts": {
-        "start": "nodemon --watch src --exec npm run flow-and-build-run",
+        "start": "nodemon --watch src --exec npm run check-and-build-run",
         "serve": "babel-node --require dotenv/config dist/index.js",
         "build": "rimraf ./dist && babel src/ -d dist/",
         "build-run": "npm run build && npm run serve",
-        "eslint": "eslint src",
-        "flow": "flow",
-        "flow-and-build-run": "npm run flow && npm run build-run",
+        "check": "npm run flow && npm run eslint",
+        "check-and-build-run": "npm run check && npm run build-run",
+        "eslint": "eslint src; exit 0",
+        "flow": "flow; exit 0",
         "flow-typed-install": "flow-typed install -s"
     },
     "dependencies": {
@@ -44,57 +45,5 @@
     },
     "bugs": {
         "url": "https://github.com/deniska-sosiska/CollegeBook-MEVN-stack/issues"
-    },
-    "eslintConfig": {
-        "extends": "airbnb-base",
-        "env": {
-            "browser": true,
-            "commonjs": true,
-            "es2021": true,
-            "node": true
-        },
-        "root": true,
-        "rules": {
-            "no-unused-vars": "warn",
-            "indent": [
-                "error",
-                4
-            ],
-            "no-multiple-empty-lines": [
-                "warn",
-                {
-                    "max": 4,
-                    "maxEOF": 0
-                }
-            ],
-            "object-curly-newline": [
-                "error",
-                {
-                    "multiline": true,
-                    "consistent": true
-                }
-            ],
-            "no-plusplus": [
-                "error",
-                {
-                    "allowForLoopAfterthoughts": true
-                }
-            ],
-            "no-underscore-dangle": [
-                "error",
-                {
-                    "allow": [
-                        "_id"
-                    ]
-                }
-            ],
-            "curly": "error",
-            "no-restricted-syntax": [
-                "error",
-                "ForInStatement",
-                "LabeledStatement",
-                "WithStatement"
-            ]
-        }
     }
 }
