--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,43 +1,35 @@
 {
+    "parser": "@babel/eslint-parser",
     "extends": "airbnb-base",
     "env": {
         "node": true
     },
     "root": true,
+    "plugins": [
+        "import"
+    ],
     "rules": {
-        "no-unused-vars": "warn",
-        "indent": [
-            "error",
-            4
-        ],
-        "no-multiple-empty-lines": [
-            "warn",
-            {
-                "max": 4,
-                "maxEOF": 0
-            }
-        ],
-        "object-curly-newline": [
-            "error",
-            {
-                "multiline": true,
-                "consistent": true
-            }
-        ],
-        "no-plusplus": [
-            "error",
-            {
-                "allowForLoopAfterthoughts": true
-            }
-        ],
-        "no-underscore-dangle": [
-            "error",
-            {
-                "allow": [
-                    "_id"
-                ]
-            }
-        ],
+        "indent": ["error", 4],
+        "no-unused-vars": ["warn"],
+        "no-multi-spaces": ["error", {
+            "ignoreEOLComments": false
+        }],
+        "no-multiple-empty-lines": ["warn", {
+            "max": 4,
+            "maxEOF": 0
+        }],
+        "object-curly-newline": ["error",{
+            "multiline": true,
+            "consistent": true
+        }],
+        "no-plusplus": ["error",{
+            "allowForLoopAfterthoughts": true
+        }],
+        "no-underscore-dangle": ["error", {
+            "allow": [
+                "_id"
+            ]
+        }],
         "curly": "error",
         "no-restricted-syntax": [
             "error",
@@ -45,6 +37,7 @@
             "LabeledStatement",
             "WithStatement"
         ],
+        "import/no-default-export": "error",
         "import/prefer-default-export": "off"
     }
 }
