--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
         "check": "npm run flow && npm run eslint",
         "eslint": "eslint src; exit 0",
         "flow": "flow; exit 0",
-        "flow-typed-install": "flow-typed install -s"
+        "flow-typed-install": "flow-typed install --skip"
     },
     "dependencies": {
         "boom": "^7.3.0",
@@ -34,9 +34,11 @@
         "@babel/preset-flow": "^7.16.7",
         "eslint": "^8.6.0",
         "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-flowtype": "^8.0.3",
         "eslint-plugin-import": "^2.25.4",
         "flow-bin": "^0.169.0",
         "flow-typed": "^3.6.1",
+        "flowgen": "^1.16.2",
         "rimraf": "^3.0.2"
     },
     "repository": {
