--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -5,10 +5,9 @@
         "node": true
     },
     "root": true,
-    "ignorePatterns": ["/flow-typed", "/dist"],
+    "ignorePatterns": ["/dist"],
     "plugins": [
-        "import",
-        "flowtype"
+        "import"
     ],
     "rules": {
         "indent": ["error", 4],
@@ -42,10 +41,6 @@
         ],
 
         "import/no-default-export": "error",
-        "import/prefer-default-export": "off",
-
-        "flowtype/require-valid-file-annotation": [2, "never", {
-            "annotationStyle": "block"
-        }]
+        "import/prefer-default-export": "off"
     }
 }
