--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,8 @@
         "serve": "babel-node --require dotenv/config dist/index.js",
         "build": "rimraf ./dist && babel src/ -d dist/",
         "build-run": "npm run build && npm run check && npm run serve",
-        "check": "npm run flow && npm run eslint",
-        "eslint": "eslint src; exit 0",
-        "flow": "flow; exit 0",
-        "flow-typed-install": "flow-typed install --skip"
+        "check": "npm run eslint",
+        "eslint": "eslint src; exit 0"
     },
     "dependencies": {
         "boom": "^7.3.0",
@@ -31,14 +29,9 @@
         "@babel/eslint-parser": "^7.16.5",
         "@babel/node": "^7.16.8",
         "@babel/preset-env": "^7.16.8",
-        "@babel/preset-flow": "^7.16.7",
         "eslint": "^8.6.0",
         "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-plugin-flowtype": "^8.0.3",
         "eslint-plugin-import": "^2.25.4",
-        "flow-bin": "^0.169.0",
-        "flow-typed": "^3.6.1",
-        "flowgen": "^1.16.2",
         "rimraf": "^3.0.2"
     },
     "repository": {
