--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,11 @@
     "homepage": "https://github.com/deniska-sosiska/CollegeBook-MEVN-stack#readme",
     "license": "ISC",
     "scripts": {
-        "start": "nodemon --watch src --exec npm run build-run",
+        "start": "nodemon --watch src --exec yarn build-run",
         "serve": "babel-node --require dotenv/config dist/index.js",
         "build": "rimraf ./dist && babel src/ -d dist/",
-        "build-run": "npm run build && npm run check && npm run serve",
-        "check": "npm run eslint",
-        "eslint": "eslint src; exit 0"
+        "build-run": "yarn build && yarn eslint-check && yarn serve",
+        "eslint-check": "yarn eslint src || exit 0"
     },
     "dependencies": {
         "boom": "^7.3.0",
